--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
     <div class="navbar">
       <div class="navbar-center">
-          <a href="main.html">Home</a>
+          <a href="index.html">Home</a>
           <a href="info.html">Info</a>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
