--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <body>
   <div class="navbar">
     <div class="navbar-center">
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="info.html">Info</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
