--- a/about.html
+++ b/about.html
@@ -28,14 +28,13 @@
       <img src="images/large-profile.jpg" id="largeprofile" alt="Grduation photo in london.">
     </div>
 
-
 <div class="float-son">
       <h1>Hi, welcome to my website </h1>
       <blockquote>
         <p class="sub-title">The greatest wealth is health.</p>
      </blockquote>
  <p class="sub-title no-quotes">
-     This <a href="main.html">website</a> is inspired by a deeply personal journey...
+     This <a href="index.html">website</a> is inspired by a deeply personal journey...
      <br>
 In 2020, my mother was diagnosed with stage IV lung cancer, necessitating weekly blood tests. 
 Driven by a desire to support her, I envisioned an application that could not only record these blood tests 
