--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Title Section -->
 
   <div class="header">
-    <img src="../images/profile.jpg" id="profilePic" alt="This is a photo of myself.">
+    <img src="profile.jpg" id="profilePic" alt="This is a photo of myself.">
     <h2 > My Health Data</h2>
 
     <p class="subtitle"><em>Personal Blood Test Record</em></p>
