--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
     <div class="float-container">
     <div class="float-child">
-      <img src="images/large-profile.jpg" id="largeprofile" alt="Grduation photo in london.">
+      <img src="large-profile.jpg" id="largeprofile" alt="Grduation photo in london.">
     </div>
 
 <div class="float-son">
